fix newInstance() deprecated
clz.newInstance() -> clz.getDeclaredConstructor().newInstance()