@@ -115,10 +115,9 @@ public class OpenApiSystem extends AbstractSource implements PollableSource, Con
         ReflectNormalSystem reflectExecuter = null;
         try {
           Class<?> clz = Class.forName(configInfo.get("invokeClass").toString());
-          reflectExecuter  = (ReflectNormalSystem)clz.newInstance();
+          reflectExecuter  = (ReflectNormalSystem)clz.getDeclaredConstructor().newInstance();
           reflectExecuter.init(getChannelProcessor(), configInfo);
           reflectExecuter.doit();
-
         } catch (IllegalAccessException | InstantiationException | ClassNotFoundException e) {
           log.error("Exception : "+ExceptionUtils.getStackTrace(e));
         }
